Fixes T97
Summary: Fixes T97

Test Plan: Text in the output should no longer be truncated.

Reviewers: sebastian

Reviewed By: sebastian

Maniphest Tasks: T97

Differential Revision: https://phabricator.magic3w.com/D243

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -321,13 +321,20 @@ input[type="submit"] {
 }
 
 .visa-result .description {
-	white-space: nowrap;
-	text-overflow: ellipsis;
 	overflow: hidden;
 	display: block;
 	color: #555;
 	font-size: .8rem;
 	padding: .3rem 0;
+	
+	.frm-ctrl-rad {
+		float: left;
+	}
+	
+	span[data-for="name"] {
+		display: block;
+		margin-left: 35px;
+	}
 }
 
 .separator {
